feat: initialize project with package.json and create index.html for Zaho corporate website

--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -15,16 +15,27 @@
     "title": "فلوسك في تليفونك",
     "subtitle": "زاهو - شركة مختصة في الحلول الرقمية المبتكرة والخدمات المالية الإلكترونية، نسعى إلى تطوير منظومة الدفع الرقمي في ليبيا",
     "cta1": "اكتشف حولي",
-    "cta2": "اعرف المزيد"
+    "cta2": "اعرف المزيد",
+    "stats1": "مستخدم",
+    "stats2": "معاملة",
+    "stats3": "تاجر",
+    "stats4": "دعم فني",
+    "appDesc": "محفظتك الإلكترونية"
   },
   "about": {
     "title": "من نحن – شركة زاهو",
+    "subtitle": "شركة رائدة في مجال الحلول المالية الرقمية في ليبيا",
+    "descriptionTitle": "زاهو للخدمات المالية الرقمية",
     "description": "زاهو هي احد الشركات المختصة في مجال الحلول الرقمية المبتكرة والخدمات المالية الإلكترونية، تسعى إلى تطوير منظومة الدفع الرقمي في ليبيا من خلال تقديم خدمات آمنة، مرنة، وسهلة الوصول.",
     "whatMakesUsSpecial": "ما يميزنا",
     "special1": "حلول رقمية تلائم السوق الليبي وتستجيب لاحتياجات المستخدمين",
     "special2": "فريق شاب يتمتع بالكفاءة والمرونة في التطوير والتشغيل",
     "special3": "التزام بأعلى معايير الأمان، الجودة، واستمرارية الخدمة",
     "special4": "قدرة عالية على التوسع ومواكبة نمو القطاع الرقمي محليًا",
+    "specialTitle1": "حلول آمنة",
+    "specialTitle2": "فريق متخصص",
+    "specialTitle3": "سرعة وأداء",
+    "specialTitle4": "قابلية التوسع",
     "vision": "رؤيتنا",
     "visionText": "أن نكون من الشركات الرائدة في مجال الدفع الرقمي والخدمات المالية الإلكترونية في ليبيا، وأن نلعب دورًا فاعلًا في بناء اقتصاد رقمي مستدام.",
     "mission": "رسالتنا",
@@ -32,30 +43,49 @@
   },
   "hawelli": {
     "title": "منتجنا الرئيسي: محفظة حولي",
+    "subtitle": "محفظة إلكترونية آمنة وسهلة الاستخدام لإدارة أموالك",
     "whatIs": "ما هي \"حولي\"؟",
-    "description": "Hawelli حولي هي المحفظة الإلكترونية المطورة من قبل شركة زاهو لخدمات الدفع الإلكتروني، وهي الحل الرقمي الذي سيُستخدم من قبل العملاء والتجار لإجراء المعاملات المالية بطريقة آمنة ومبسطة.",
+    "description": "Hawelli حولي هي المحفظة الإلكترونية المطورة من قبل شركة زاهو، تتيح لك إدارة أموالك بسهولة وأمان من خلال هاتفك الذكي. يمكنك إجراء المدفوعات، تحويل الأموال، شحن الرصيد، ودفع الفواتير بلمسة واحدة.",
     "features": "مميزات Hawelli",
-    "feature1": "حماية عالية بفضل تقنيات التشفير",
-    "feature2": "واجهة استخدام سهلة وبديهية",
-    "feature3": "تحويل واستلام الأموال فورًا",
-    "feature4": "دفع فواتير واشتراكات",
-    "feature5": "دعم الدفع لدى التجار وربط نقاط البيع",
+    "featureTitle1": "حماية وأمان",
+    "featureTitle2": "معاملات فورية",
+    "featureTitle3": "دفع الفواتير",
+    "featureTitle4": "دفع للمتاجر",
+    "featureTitle5": "تقارير مفصلة",
+    "feature1": "حماية عالية بفضل تقنيات التشفير المتقدمة",
+    "feature2": "تحويل واستلام الأموال فورياً وبسرعة",
+    "feature3": "دفع فواتير الكهرباء والمياه والاشتراكات",
+    "feature4": "دعم الدفع لدى التجار وربط نقاط البيع",
+    "feature5": "تقارير ومتابعة آنية للرصيد والمعاملات",
     "feature6": "تقارير ومتابعة آنية للرصيد والمعاملات",
     "forWho": "لمن صممت Hawelli؟",
-    "forWho1": "الأفراد الباحثين عن وسيلة دفع آمنة وعصرية",
-    "forWho2": "التجار وأصحاب المشاريع الذين يحتاجون لحلول مالية مرنة",
-    "forWho3": "المؤسسات والشركات الصغيرة والمتوسطة",
-    "comingSoon": "قريبًا على",
-    "appStore": "App Store",
-    "googlePlay": "Google Play"
+    "forWho1": "الأفراد",
+    "forWho2": "التجار",
+    "forWho3": "المؤسسات",
+    "forWhoDesc1": "الباحثين عن وسيلة دفع آمنة وسهلة للاستخدام اليومي",
+    "forWhoDesc2": "أصحاب المشاريع الصغيرة والمتوسطة لتسهيل الدفع الإلكتروني",
+    "forWhoDesc3": "الشركات الراغبة في تبنّي حلول مالية إلكترونية حديثة",
+    "comingSoon": "قريبًا على متاجر التطبيقات",
+    "appStore": "متجر التطبيقات",
+    "googlePlay": "جوجل بلاي",
+    "downloadOn": "متوفر على",
+    "getItOn": "احصل عليه من"
   },
   "services": {
     "title": "خدماتنا الحالية والمستقبلية",
+    "subtitle": "نقدم مجموعة متكاملة من الخدمات المالية الرقمية",
     "service1": "تطوير وتشغيل حلول مالية إلكترونية مخصصة",
+    "serviceDesc1": "نصمم ونطور حلولاً مالية إلكترونية متكاملة تلبي احتياجات السوق الليبي.",
     "service2": "بناء بوابات دفع وتكامل مع الأنظمة المصرفية",
+    "serviceDesc2": "بناء بوابات دفع وتكامل مع الأنظمة المصرفية والمالية.",
     "service3": "تقديم أدوات إدارة مالية للمؤسسات والشركات الصغيرة",
-    "service4": "دعم عمليات الدفع الإلكتروني وتطوير واجهات برمجة التطبيقات",
+    "serviceDesc3": "تقديم أدوات إدارة مالية متقدمة للمؤسسات والشركات.",
+    "service4": "دعم عمليات الدفع الإلكتروني وتطوير واجهات برمجية",
+    "serviceDesc4": "دعم عمليات الدفع الإلكتروني وتطوير واجهات برمجية APIs.",
     "service5": "تصميم أنظمة إدارة للنقاط التجارية والخدمية",
+    "serviceDesc5": "تصميم أنظمة إدارة للنقاط التجارية ودفع الفواتير.",
+    "service6": "الدعم والاستشارات",
+    "serviceDesc6": "تقديم استشارات تقنية ودعم فني متخصص للخدمات المالية.",
     "wallets": "المحافظ الإلكترونية (حولي)",
     "walletsOverview": "لمحة عامة عن حولي",
     "individualWallet": "محفظة الأفراد",
@@ -83,7 +113,8 @@
     "contactSupport": "تواصل مع الدعم"
   },
   "solutions": {
-    "title": "نخدم من",
+    "title": "من نخدم",
+    "subtitle": "حلولنا المالية تلبي احتياجات مختلف القطاعات",
     "individuals": "الأفراد",
     "individualsDesc": "الباحثين عن خدمات دفع سهلة وآمنة",
     "merchants": "التجار",
@@ -111,19 +142,26 @@
     "ctaTitle": "ابدأ رحلتك مع حولي اليوم",
     "ctaDesc": "اكتشف المحفظة الإلكترونية التي ستغير طريقة تعاملك مع المال",
     "ctaButton": "اكتشف حولي"
+    ,
+    "workingHoursTitle": "ساعات العمل",
+    "workingHoursWeek": "الأحد - الخميس: 09:00 - 17:00",
+    "workingHoursWeekend": "الجمعة - السبت: مغلق"
   },
   "footer": {
     "description": "شركة مختصة في الحلول الرقمية المبتكرة والخدمات المالية الإلكترونية",
     "quickLinks": "روابط سريعة",
     "policies": "السياسات",
     "followUs": "تابعنا",
+    "newsletter": "اشترك في نشرتنا الإخبارية",
+    "newsletterPlaceholder": "بريدك الإلكتروني",
     "copyright": "جميع الحقوق محفوظة"
   },
   "common": {
     "readMore": "اقرأ المزيد",
     "learnMore": "اعرف المزيد",
     "getStarted": "ابدأ الآن",
-    "download": "تحميل التطبيق"
+    "download": "تحميل التطبيق",
+    "closed": "مغلق"
   }
 }
 
