--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -15,11 +15,22 @@
     "title": "Your Money in Your Phone",
     "subtitle": "Zaho - A company specialized in innovative digital solutions and electronic financial services, we strive to develop the digital payment system in Libya",
     "cta1": "Discover Hawelli",
-    "cta2": "Learn More"
+    "cta2": "Learn More",
+    "stats1": "Users",
+    "stats2": "Transactions",
+    "stats3": "Merchants",
+    "stats4": "Support",
+    "appDesc": "Your Electronic Wallet"
   },
   "about": {
     "title": "About Us – Zaho Company",
+    "subtitle": "A leading company in digital financial solutions in Libya",
+    "descriptionTitle": "Zaho Digital Financial Services",
     "description": "Zaho is one of the companies specialized in innovative digital solutions and electronic financial services, seeking to develop the digital payment system in Libya by providing secure, flexible, and accessible services.",
+    "specialTitle1": "Secure Solutions",
+    "specialTitle2": "Specialized Team",
+    "specialTitle3": "Speed & Performance",
+    "specialTitle4": "Scalability",
     "whatMakesUsSpecial": "What Makes Us Special",
     "special1": "Digital solutions that suit the Libyan market and respond to users' needs",
     "special2": "A young team with efficiency and flexibility in development and operations",
@@ -32,30 +43,49 @@
   },
   "hawelli": {
     "title": "Our Main Product: Hawelli Wallet",
+    "subtitle": "A secure and easy-to-use electronic wallet to manage your money",
     "whatIs": "What is \"Hawelli\"?",
-    "description": "Hawelli is the electronic wallet developed by Zaho for electronic payment services. It is the digital solution that will be used by customers and merchants to conduct financial transactions in a secure and simplified manner.",
+    "description": "Hawelli is the electronic wallet developed by Zaho, allowing you to manage your money easily and securely through your smartphone. You can make payments, transfer money, recharge balance, and pay bills with one touch.",
     "features": "Hawelli Features",
-    "feature1": "High protection thanks to encryption technologies",
-    "feature2": "Easy and intuitive user interface",
-    "feature3": "Instant money transfer and receipt",
-    "feature4": "Bill and subscription payments",
-    "feature5": "Support for merchant payments and POS integration",
+    "featureTitle1": "Security & Protection",
+    "featureTitle2": "Instant Transactions",
+    "featureTitle3": "Bill Payments",
+    "featureTitle4": "Merchant Payments",
+    "featureTitle5": "Detailed Reports",
+    "feature1": "High protection thanks to advanced encryption technologies",
+    "feature2": "Instant and fast money transfer and receipt",
+    "feature3": "Pay electricity, water bills and subscriptions",
+    "feature4": "Support for merchant payments and POS integration",
+    "feature5": "Real-time reports and tracking of balance and transactions",
     "feature6": "Real-time reports and tracking of balance and transactions",
     "forWho": "Who is Hawelli Designed For?",
-    "forWho1": "Individuals seeking a secure and modern payment method",
-    "forWho2": "Merchants and business owners who need flexible financial solutions",
-    "forWho3": "Institutions and small to medium enterprises",
-    "comingSoon": "Coming soon on",
+    "forWho1": "Individuals",
+    "forWho2": "Merchants",
+    "forWho3": "Institutions",
+    "forWhoDesc1": "Seeking a secure and easy payment method for daily use",
+    "forWhoDesc2": "Small and medium business owners to facilitate electronic payments",
+    "forWhoDesc3": "Companies wanting to adopt modern electronic financial solutions",
+    "comingSoon": "Coming soon on app stores",
     "appStore": "App Store",
-    "googlePlay": "Google Play"
+    "googlePlay": "Google Play",
+    "downloadOn": "Download on the",
+    "getItOn": "Get it on"
   },
   "services": {
     "title": "Our Current and Future Services",
+    "subtitle": "We offer a comprehensive suite of digital financial services",
+    "serviceDesc1": "We design and develop integrated electronic financial solutions that meet the needs of the Libyan market.",
+    "serviceDesc2": "Building payment gateways and integration with banking and financial systems.",
+    "serviceDesc3": "Providing advanced financial management tools for institutions and companies.",
+    "serviceDesc4": "Supporting electronic payment operations and developing APIs.",
+    "serviceDesc5": "Designing management systems for commercial points of sale and bill payments.",
+    "serviceDesc6": "Providing technical consulting and specialized support for financial services.",
     "service1": "Development and operation of customized electronic financial solutions",
     "service2": "Building payment gateways and integration with banking systems",
     "service3": "Providing financial management tools for institutions and small companies",
     "service4": "Supporting electronic payment operations and developing APIs",
     "service5": "Designing management systems for commercial and service points",
+    "service6": "Support and consulting",
     "wallets": "Electronic Wallets (Hawelli)",
     "walletsOverview": "Hawelli Overview",
     "individualWallet": "Individual Wallet",
@@ -84,6 +114,7 @@
   },
   "solutions": {
     "title": "Who We Serve",
+    "subtitle": "Our financial solutions meet the needs of diverse sectors",
     "individuals": "Individuals",
     "individualsDesc": "Seeking easy and secure payment services",
     "merchants": "Merchants",
@@ -111,19 +142,26 @@
     "ctaTitle": "Start Your Journey with Hawelli Today",
     "ctaDesc": "Discover the electronic wallet that will change the way you deal with money",
     "ctaButton": "Discover Hawelli"
+  ,
+  "workingHoursTitle": "Working Hours",
+  "workingHoursWeek": "Sunday - Thursday: 9:00 AM - 5:00 PM",
+  "workingHoursWeekend": "Friday - Saturday: Closed"
   },
   "footer": {
     "description": "A company specialized in innovative digital solutions and electronic financial services",
     "quickLinks": "Quick Links",
     "policies": "Policies",
     "followUs": "Follow Us",
+    "newsletter": "Subscribe to our newsletter",
+    "newsletterPlaceholder": "Your email",
     "copyright": "All rights reserved"
   },
   "common": {
     "readMore": "Read More",
     "learnMore": "Learn More",
     "getStarted": "Get Started",
-    "download": "Download App"
+    "download": "Download App",
+    "closed": "Closed"
   }
 }
 
