Add privacy policy page in Arabic and English with responsive design

--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -12,7 +12,7 @@
     "contact": "اتصل بنا"
   },
   "hero": {
-    "title": "فلوسك في تليفونك",
+    "title": "مستقبل الدفع الرقمي",
     "subtitle": "زاهو - شركة مختصة في الحلول الرقمية المبتكرة والخدمات المالية الإلكترونية، نسعى إلى تطوير منظومة الدفع الرقمي في ليبيا",
     "cta1": "اكتشف حولي",
     "cta2": "اعرف المزيد",
@@ -42,29 +42,22 @@
     "missionText": "نطمح إلى تعزيز الثقة بالخدمات الرقمية، وتسهيل وصول الأفراد والمؤسسات إلى أدوات مالية حديثة وآمنة، مما يساهم في تحقيق الشمول المالي والتحول نحو مجتمع أقل اعتمادًا على النقد."
   },
   "hawelli": {
-    "title": "منتجنا الرئيسي: محفظة حولي",
-    "subtitle": "محفظة إلكترونية آمنة وسهلة الاستخدام لإدارة أموالك",
-    "whatIs": "ما هي \"حولي\"؟",
-    "description": "Hawelli حولي هي المحفظة الإلكترونية المطورة من قبل شركة زاهو، تتيح لك إدارة أموالك بسهولة وأمان من خلال هاتفك الذكي. يمكنك إجراء المدفوعات، تحويل الأموال، شحن الرصيد، ودفع الفواتير بلمسة واحدة.",
-    "features": "مميزات Hawelli",
-    "featureTitle1": "حماية وأمان",
-    "featureTitle2": "معاملات فورية",
-    "featureTitle3": "دفع الفواتير",
-    "featureTitle4": "دفع للمتاجر",
-    "featureTitle5": "تقارير مفصلة",
-    "feature1": "حماية عالية بفضل تقنيات التشفير المتقدمة",
-    "feature2": "تحويل واستلام الأموال فورياً وبسرعة",
-    "feature3": "دفع فواتير الكهرباء والمياه والاشتراكات",
-    "feature4": "دعم الدفع لدى التجار وربط نقاط البيع",
-    "feature5": "تقارير ومتابعة آنية للرصيد والمعاملات",
-    "feature6": "تقارير ومتابعة آنية للرصيد والمعاملات",
-    "forWho": "لمن صممت Hawelli؟",
-    "forWho1": "الأفراد",
-    "forWho2": "التجار",
-    "forWho3": "المؤسسات",
-    "forWhoDesc1": "الباحثين عن وسيلة دفع آمنة وسهلة للاستخدام اليومي",
-    "forWhoDesc2": "أصحاب المشاريع الصغيرة والمتوسطة لتسهيل الدفع الإلكتروني",
-    "forWhoDesc3": "الشركات الراغبة في تبنّي حلول مالية إلكترونية حديثة",
+    "title": "منتجنا الرئيسي",
+    "subtitle": "",
+    "whatIs": "",
+    "description": "",
+    "features": "",
+    "featureTitle1": "",
+    "featureTitle2": "",
+    "featureTitle3": "",
+    "featureTitle4": "",
+    "featureTitle5": "",
+    "feature1": "",
+    "feature2": "",
+    "feature3": "",
+    "feature4": "",
+    "feature5": "",
+    "feature6": "",
     "comingSoon": "قريبًا على متاجر التطبيقات",
     "appStore": "متجر التطبيقات",
     "googlePlay": "جوجل بلاي",
