--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -12,7 +12,7 @@
     "contact": "Contact Us"
   },
   "hero": {
-    "title": "Your Money in Your Phone",
+    "title": "The Future of Digital Payment",
     "subtitle": "Zaho - A company specialized in innovative digital solutions and electronic financial services, we strive to develop the digital payment system in Libya",
     "cta1": "Discover Hawelli",
     "cta2": "Learn More",
@@ -42,29 +42,22 @@
     "missionText": "We aspire to enhance trust in digital services and facilitate access for individuals and institutions to modern and secure financial tools, contributing to financial inclusion and the transition to a less cash-dependent society."
   },
   "hawelli": {
-    "title": "Our Main Product: Hawelli Wallet",
-    "subtitle": "A secure and easy-to-use electronic wallet to manage your money",
-    "whatIs": "What is \"Hawelli\"?",
-    "description": "Hawelli is the electronic wallet developed by Zaho, allowing you to manage your money easily and securely through your smartphone. You can make payments, transfer money, recharge balance, and pay bills with one touch.",
-    "features": "Hawelli Features",
-    "featureTitle1": "Security & Protection",
-    "featureTitle2": "Instant Transactions",
-    "featureTitle3": "Bill Payments",
-    "featureTitle4": "Merchant Payments",
-    "featureTitle5": "Detailed Reports",
-    "feature1": "High protection thanks to advanced encryption technologies",
-    "feature2": "Instant and fast money transfer and receipt",
-    "feature3": "Pay electricity, water bills and subscriptions",
-    "feature4": "Support for merchant payments and POS integration",
-    "feature5": "Real-time reports and tracking of balance and transactions",
-    "feature6": "Real-time reports and tracking of balance and transactions",
-    "forWho": "Who is Hawelli Designed For?",
-    "forWho1": "Individuals",
-    "forWho2": "Merchants",
-    "forWho3": "Institutions",
-    "forWhoDesc1": "Seeking a secure and easy payment method for daily use",
-    "forWhoDesc2": "Small and medium business owners to facilitate electronic payments",
-    "forWhoDesc3": "Companies wanting to adopt modern electronic financial solutions",
+    "title": "Our Main Product",
+    "subtitle": "",
+    "whatIs": "",
+    "description": "",
+    "features": "",
+    "featureTitle1": "",
+    "featureTitle2": "",
+    "featureTitle3": "",
+    "featureTitle4": "",
+    "featureTitle5": "",
+    "feature1": "",
+    "feature2": "",
+    "feature3": "",
+    "feature4": "",
+    "feature5": "",
+    "feature6": "",
     "comingSoon": "Coming soon on app stores",
     "appStore": "App Store",
     "googlePlay": "Google Play",
