Add privacy policy translations and enhance animations in the website

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -144,6 +144,7 @@
     "description": "A company specialized in innovative digital solutions and electronic financial services",
     "quickLinks": "Quick Links",
     "policies": "Policies",
+    "privacyPolicy": "Privacy Policy",
     "followUs": "Follow Us",
     "newsletter": "Subscribe to our newsletter",
     "newsletterPlaceholder": "Your email",
