--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -144,6 +144,7 @@
     "description": "شركة مختصة في الحلول الرقمية المبتكرة والخدمات المالية الإلكترونية",
     "quickLinks": "روابط سريعة",
     "policies": "السياسات",
+    "privacyPolicy": "سياسة الخصوصية",
     "followUs": "تابعنا",
     "newsletter": "اشترك في نشرتنا الإخبارية",
     "newsletterPlaceholder": "بريدك الإلكتروني",
