Enhance Arabic and English language support for Hawelli product, update contact email, and implement scroll animations for improved user experience.

--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -43,26 +43,10 @@
   },
   "hawelli": {
     "title": "منتجنا الرئيسي",
-    "subtitle": "",
-    "whatIs": "",
-    "description": "",
-    "features": "",
-    "featureTitle1": "",
-    "featureTitle2": "",
-    "featureTitle3": "",
-    "featureTitle4": "",
-    "featureTitle5": "",
-    "feature1": "",
-    "feature2": "",
-    "feature3": "",
-    "feature4": "",
-    "feature5": "",
-    "feature6": "",
-    "comingSoon": "قريبًا على متاجر التطبيقات",
-    "appStore": "متجر التطبيقات",
-    "googlePlay": "جوجل بلاي",
-    "downloadOn": "متوفر على",
-    "getItOn": "احصل عليه من"
+    "ctaTitle": "محفظة حوّلي",
+    "ctaDesc": "المحفظة الإلكترونية الرائدة",
+    "ctaButton": "اكتشف حوّلي",
+    "hawelli.description":"اكتشف محفظة حوّلي، المحفظة الإلكترونية المتطورة التي تتيح لك إدارة أموالك بسهولة وأمان تام. حلول دفع مبتكرة تلبي احتياجاتك اليومية."
   },
   "services": {
     "title": "خدماتنا الحالية والمستقبلية",
@@ -132,10 +116,10 @@
     "websiteLabel": "الموقع الإلكتروني",
     "addressLabel": "مقر الشركة",
     "address": "جنزور – طرابلس – ليبيا",
-    "ctaTitle": "ابدأ رحلتك مع حولي اليوم",
+    "addressValue": "جنزور – طرابلس – ليبيا",
+    "ctaTitle": "ابدأ رحلتك مع حوّلي اليوم",
     "ctaDesc": "اكتشف المحفظة الإلكترونية التي ستغير طريقة تعاملك مع المال",
-    "ctaButton": "اكتشف حولي"
-    ,
+    "ctaButton": "اكتشف حولي",
     "workingHoursTitle": "ساعات العمل",
     "workingHoursWeek": "الأحد - الخميس: 09:00 - 17:00",
     "workingHoursWeekend": "الجمعة - السبت: مغلق"
