--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -43,26 +43,15 @@
   },
   "hawelli": {
     "title": "Our Main Product",
-    "subtitle": "",
-    "whatIs": "",
-    "description": "",
-    "features": "",
-    "featureTitle1": "",
-    "featureTitle2": "",
-    "featureTitle3": "",
-    "featureTitle4": "",
-    "featureTitle5": "",
-    "feature1": "",
-    "feature2": "",
-    "feature3": "",
-    "feature4": "",
-    "feature5": "",
-    "feature6": "",
+    "ctaTitle": "Hawelli Wallet",
+    "ctaDesc": "The leading e-wallet",
+    "ctaButton": "Discover Hawelli",
     "comingSoon": "Coming soon on app stores",
     "appStore": "App Store",
     "googlePlay": "Google Play",
     "downloadOn": "Download on the",
-    "getItOn": "Get it on"
+    "getItOn": "Get it on",
+    "description":"Discover Tahweeli Wallet, the advanced online bank that lets you manage your money easily and securely. Payment methods to meet your everyday needs."
   },
   "services": {
     "title": "Our Current and Future Services",
@@ -132,10 +121,10 @@
     "websiteLabel": "Website",
     "addressLabel": "Office Address",
     "address": "Janzour – Tripoli – Libya",
+    "addressValue": "Janzour – Tripoli – Libya",
     "ctaTitle": "Start Your Journey with Hawelli Today",
     "ctaDesc": "Discover the electronic wallet that will change the way you deal with money",
-    "ctaButton": "Discover Hawelli"
-  ,
+    "ctaButton": "Discover Hawelli",
   "workingHoursTitle": "Working Hours",
   "workingHoursWeek": "Sunday - Thursday: 9:00 AM - 5:00 PM",
   "workingHoursWeekend": "Friday - Saturday: Closed"
