feat: update Arabic and English vision texts, enhance navigation links, and create new Hawelli pages

--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -37,7 +37,7 @@
     "specialTitle3": "سرعة وأداء",
     "specialTitle4": "قابلية التوسع",
     "vision": "رؤيتنا",
-    "visionText": "أن نكون من الشركات الرائدة في مجال الدفع الرقمي والخدمات المالية الإلكترونية في ليبيا، وأن نلعب دورًا فاعلًا في بناء اقتصاد رقمي مستدام.",
+    "visionText": "إن رؤية شركة زاهو لمنظومة الدفع الالكتروني في ليبيا تتمثل في استراتيجية  الجسر الرقمي ؛ فهي لا تكتفي بتقديم تطبيق تقني، بل تبني جسراً يربط بين البنية التحتية المصرفية واحتياجات المواطن اليومية، لتنقل المجتمع من الاعتماد على التعاملات النقدية الورقية إلى بيئة رقمية سريعة وآمنة.",
     "mission": "رسالتنا",
     "missionText": "نطمح إلى تعزيز الثقة بالخدمات الرقمية، وتسهيل وصول الأفراد والمؤسسات إلى أدوات مالية حديثة وآمنة، مما يساهم في تحقيق الشمول المالي والتحول نحو مجتمع أقل اعتمادًا على النقد."
   },
