--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -37,7 +37,7 @@
     "special3": "Commitment to the highest standards of security, quality, and service continuity",
     "special4": "High scalability and keeping pace with the growth of the digital sector locally",
     "vision": "Our Vision",
-    "visionText": "To be among the leading companies in digital payment and electronic financial services in Libya, and to play an active role in building a sustainable digital economy.",
+    "visionText": "Zaho Company’s vision for the electronic payment system in Libya is based on the Digital Bridge strategy; it does not merely provide a technical application, but rather adopts a bridge to connect private data with our daily needs, to move society from dependence on cash transactions to a secure digital environment.",
     "mission": "Our Mission",
     "missionText": "We aspire to enhance trust in digital services and facilitate access for individuals and institutions to modern and secure financial tools, contributing to financial inclusion and the transition to a less cash-dependent society."
   },
